<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/query_history_data_1_to_1"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings_1_to_1"/>
    <item
        android:id="@+id/query_history_data_3_to_0"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings_3_to_0"/>
    <item
        android:id="@+id/query_history_data_0_to_3"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings_0_to_3"/>
    <item
        android:id="@+id/query_history_data_3"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings_3"/>
    <item
        android:id="@+id/query_history_data_1"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings_1"/>
    <item
        android:id="@+id/query_history_data_0"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings_0"/>
    <item
        android:id="@+id/query_history_data_top_draw"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings_top_draw"/>

</menu>
